--- a/my-spotify/src/css/Navbar.css
+++ b/my-spotify/src/css/Navbar.css
@@ -4,7 +4,10 @@ nav {
     font-size: 24px;
     background: #030303;
     grid-column: 1 / 2;
-    grid-row: 1 / 6;
+    height: 100vh;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
 }
 
 a {
