--- a/my-spotify/src/css/LibraryNav.css
+++ b/my-spotify/src/css/LibraryNav.css
@@ -9,17 +9,13 @@
     top: 0;
 }
 
-#libraryNav:first-child {
-    margin-left: 25px;
-}
-
 #libraryNav > a {
     text-decoration: none;
     color: #686868;
-    margin-left: 10px;
-    margin-right: 5px;
+    margin-left: 45px;
     font-size: 16px;
     font-weight: bold;
+    letter-spacing: 2px;
 }
 
 #libraryNav > a:hover {
