--- a/my-spotify/src/App.css
+++ b/my-spotify/src/App.css
@@ -6,7 +6,7 @@
     color: white;
 }
 
-.albumAnchor, .artistAnchor {
+.albumAnchor, .artistAnchor, .playlistAnchor {
     text-decoration: none;
     color: white;
 }
