--- a/my-spotify/src/css/DisplayComponents/DisplayTracks.css
+++ b/my-spotify/src/css/DisplayComponents/DisplayTracks.css
@@ -1,28 +1,28 @@
-#displayPlaylist {
+.displayTracks {
     display: grid;
     grid-template-columns: 1fr 3fr;
     margin-left: 45px;
     margin-top: 60px;
 }
 
-#playlistInfo {
+.displayInfo {
     grid-column: 1 / 2;
     display: flex;
     flex-direction: column;
     align-content: center;
 }
 
-.displayPlaylistCover {
+.displayCover {
     width: 100%;
     align-self: center;
 }
 
-#displayPlaylistTitle {
+.displayName {
     font-size: 28px;
     margin-bottom: 0px;
 }
 
-#displayPlaylistArtist, #displayPlaylistLength {
+.displayOwner, .displayLength {
     color: #b4b4b4;
     font-size: 16px;
     margin-bottom: 0px;
