--- a/my-spotify/src/App.css
+++ b/my-spotify/src/App.css
@@ -1,9 +1,34 @@
 .App {
+    position: relative;
     display: grid;
-    grid-template-columns: 1fr 5fr;
+    grid-template-columns: 1fr 6fr;
+    grid-template-rows: 6fr 1fr;
     background: #111111;
     text-align: center;
     color: white;
+}
+
+.mainContent {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    z-index: 1;
+}
+
+.playback {
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+    background-color: #282828;
+    border-top: 1px solid black;
+    position: sticky;
+    bottom: 0;
+    height: fit-content;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    z-index: 4;
+}
+
+h2 {
+    text-align: left;
 }
 
 .displayAnchor {
