--- a/my-spotify/src/App.css
+++ b/my-spotify/src/App.css
@@ -19,11 +19,12 @@
     grid-row: 2 / 3;
     background-color: #282828;
     border-top: 1px solid black;
-    position: sticky;
+    position: fixed;
+    width: 100%;
     bottom: 0;
     height: fit-content;
-    padding-top: 25px;
-    padding-bottom: 25px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     z-index: 4;
 }
 
