--- a/my-spotify/src/css/Navbar.css
+++ b/my-spotify/src/css/Navbar.css
@@ -3,9 +3,9 @@
     flex-direction: column;
     font-size: 24px;
     background: #030303;
+    width: 12%;
     height: 100vh;
-    position: -webkit-sticky;
-    position: sticky;
+    position: fixed;
     top: 0;
     padding-top: 58px;
     margin-right: 15px;
