--- a/my-spotify/src/css/Home.css
+++ b/my-spotify/src/css/Home.css
@@ -1,10 +1,13 @@
+.homeListContainer {
+    overflow: scroll;
+}
+
 #newReleases, #recents, #topArtists, #topTracks {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
     margin-top: 50px;
     background: #111111;
     color: white;
+    overflow: scroll;
 }
 
 .libraryAlbum, .artist {
