--- a/my-spotify/src/css/Home.css
+++ b/my-spotify/src/css/Home.css
@@ -22,6 +22,9 @@
     overflow: hidden;
 }
 
+.libraryAlbum:hover, .artist:hover {
+    background: #444444;
+}
 
 #homeDiv {
     margin-top: 10px;
